修改清明祭

--- a/source/_posts/清明祭.md
+++ b/source/_posts/清明祭.md
@@ -12,9 +12,13 @@ categories: lifeme
 
 
 ```css
-html{
-  filter:progid:DXImageTransForm.Microsoft.BasicImage(grayscale=1);
-  -webkit-filter:saturate(0)
+html {
+    -webkit-filter: grayscale(100%);
+    -moz-filter: grayscale(100%);
+    -ms-filter: grayscale(100%);
+    -o-filter: grayscale(100%);
+    filter: grayscale(100%);
+    filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);
 }
 ```
 
