修改清明祭.md

--- a/source/_posts/清明祭.md
+++ b/source/_posts/清明祭.md
@@ -9,16 +9,23 @@ categories: lifeme
 
 >今日，全国哀悼。此刻，一起缅怀，为逝去的同胞！
 
-
-
 ```css
 html {
-    -webkit-filter: grayscale(100%);
-    -moz-filter: grayscale(100%);
-    -ms-filter: grayscale(100%);
-    -o-filter: grayscale(100%);
-    filter: grayscale(100%);
     filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);
+    -webkit-filter: grayscale(100%);
+}
+```
+或者
+
+```css
+body *{
+    -webkit-filter: grayscale(100%); /* webkit */
+    -moz-filter: grayscale(100%); /*firefox*/
+    -ms-filter: grayscale(100%); /*ie9*/
+    -o-filter: grayscale(100%); /*opera*/
+    filter: grayscale(100%);
+    filter:progid:DXImageTransform.Microsoft.BasicImage(grayscale=1); 
+    filter:gray; /*ie9- */
 }
 ```
 
