修改博客拯救计划.md

--- a/source/_posts/博客拯救计划.md
+++ b/source/_posts/博客拯救计划.md
@@ -73,11 +73,29 @@ categories: lifeme
 
 另外大陆速度不错，可使用 now.sh CLI或GitHub，GitLab，Bitbucket导入项目进行自动代码部署，提供ServerLess，会地总分配的*.now.sh域名，但免费额度的流量有点少，限量20G。
 
-我自己的实现：[南国薏米](https://eelve-github-io.now.sh/)。在我本地提交代码之后会自动触发，重新解析从而可以达到博客同步更新，在这一点上是和Github Pages更新是一样的。说实话我们完全可以将博客迁移，并且你之前开发Hexo的不走完全没有改变。
+我自己的实现：[南国薏米](https://eelve-github-io.now.sh/)。在我本地提交代码之后会自动触发，重新解析从而可以达到博客同步更新，在这一点上是和Github Pages更新是一样的。说实话我们完全可以将博客迁移，并且你之前开发Hexo的不走完全没有改变。另外你的Hexo是采用多分支管理：博客分支和源代码分支。如果你的源代码分支中包含主题子仓库的话，发布之后ZEIT是不能正常解析的，会丢失样式。如果为了解决我们可以配置ZEIT是解析我们Hexo博客分支就 可以了。
 
 # 陆、云存储
 
-我这里有一个利用又拍云实现的案例：[南国薏米](https://image.eelve.com/)。我们可以在生成静态页面之后，将页面全部上传的控件中，然后在云存储中开启index首页，就可以正常访问了。
+我这里有一个利用又拍云实现的案例：[南国薏米](https://image.eelve.com/)。我们可以在生成静态页面之后，将页面全部上传的控件中，然后在云存储中开启index首页，就可以正常访问了。这里我们还可以结合hexo的插件来使用：
+
+安装插件
+
+```shell script
+npm install hexo-deployer-upyundeploy --save
+```
+
+编辑根目录的_config.yml文件的deploy字段,配置又拍云存储的服务名称、操作员名称、操作员密码
+
+```yaml
+deploy:
+  - type: upyun
+    serviceName: 服务名称
+    operatorName: 操作员名称
+    operatorPassword: 操作员密码
+    path: / 上传目录(选填，默认为根目录)
+```
+
 
 ---
 
