--- a/source/_posts/站点迁移指北.md
+++ b/source/_posts/站点迁移指北.md
@@ -76,7 +76,7 @@ set smtp-auth-password=yourpasswd   #自己的授权码#非邮箱密码
 set smtp-auth=login
 ~~~
 
-如果在测试执行脚本，发现发送报错的话，那就是证书有问题，只需要在上面提到的`/root/.certs/`文件夹中防止`163邮箱`的证书即可。
+如果在测试执行脚本，发现发送报错的话，那就是证书有问题，只需要在上面提到的`/root/.certs/`文件夹中放置`163邮箱`的证书即可。
 
 ~~~bash
 Resolving host smtp.163.com . . . done.
