--- a/source/_posts/站点迁移指北.md
+++ b/source/_posts/站点迁移指北.md
@@ -16,7 +16,7 @@ categories: lifeme
 
 ## 2.1、Nginx
 
-其实`Nginx`的迁移很简单，只需要再新的服务器中安装即可，然后迁移`nginx.conf`配置文件。我的站点还用到`https`，所有在安装的时候要注意安装相应的模块以及证书的迁移。
+其实`Nginx`的迁移很简单，只需要在新的服务器中安装即可，然后迁移`nginx.conf`配置文件。我的站点还用到`https`，所有在安装的时候要注意安装相应的模块以及证书的迁移。
 
 ~~~bash
 ./configure --prefix=/usr/local/nginx --add-module=../ngx_cache_purge-1.3/  --with-http_stub_status_module --with-http_ssl_module --with-http_flv_module --with-http_gzip_static_module
