--- a/source/_posts/双仓库同步代码.md
+++ b/source/_posts/双仓库同步代码.md
@@ -3,6 +3,7 @@ title: 双仓库同步代码
 date: 2020-04-30 15:36:38
 tags: [git]
 categories: git
+description: 在最近的工作中，涉及到把一份代码同时上传到两个git仓库，下面是简单的记录。
 ---
 
 【**前情提要**】在最近的工作中，涉及到把一份代码同时上传到两个git仓库，下面是简单的记录。
