--- a/source/_posts/站点迁移指北.md
+++ b/source/_posts/站点迁移指北.md
@@ -3,6 +3,7 @@ title: 站点迁移指北
 date: 2020-11-07 21:53:22
 tags: lifeme
 categories: lifeme
+description: 由于服务器快到期了，就重新另购了一台服务器。这边就来记录一下迁移的过程和日常数据备份等等。
 ---
 
 【**前面的话**】由于服务器快到期了，就重新另购了一台服务器。这边就来记录一下迁移的过程和日常数据备份等等。
