--- a/source/_posts/清明祭.md
+++ b/source/_posts/清明祭.md
@@ -3,6 +3,7 @@ title: 清明祭
 date: 2020-04-04 09:44:57
 tags: lifeme
 categories: lifeme
+description: 今日，全国哀悼。此刻，一起缅怀，为逝去的同胞！
 ---
 
 ![清明祭](https://image.eelve.com/eblog/20200404.jpg)
